content/nomad/v1.9.x/content/docs/configuration/sentinel.mdx
---
layout: docs
page_title: sentinel Block in Agent Configuration
description: >-
  Configure Sentinel policy engine behavior in the "sentinel" block of a Nomad agent configuration. Configure the path to the plugin that Nomad uses to import Sentinel policies and specify arguments to pass to that plugin on startup.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# `sentinel` Block in Agent Configuration

<Placement groups={['sentinel']} />
<EnterpriseAlert product="nomad"/>

This page provides reference information for configuring the Sentinel policy
engine in the `sentinel` block of a Nomad agent configuration. Configure the
path to the plugin that Nomad uses to import Sentinel policies and specify
arguments to pass to that plugin on startup.

```hcl
sentinel {
    import "custom-plugin" {
        path = "/usr/bin/sentinel-custom-plugin"
        args = ["-verbose", "foo"]
    }
}
```

## `sentinel` Parameters

- `import` <code>([Import](#import-parameters): nil)</code> -
  Specifies a plugin that should be made available for importing by Sentinel policies.
  The name of the import matches the name that can be imported.

### `import` Parameters

- `path` `(string: "")` - Specifies the path to the import plugin. Must be executable by Nomad.

- `args` `(array<string>: [])` - Specifies arguments to pass to the plugin when starting it.

## Resources

Refer to these resources for details on using Sentinel policies with
Nomad:

- [Governance and policy on
  Nomad](/nomad/tutorials/governance-and-policy/governance-and-policy)
- [Sentinel policies](/nomad/tutorials/governance-and-policy/sentinel)
- [Sentinel policy
  reference](https://developer.hashicorp.com/nomad/docs/enterprise/sentinel)



